--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <article>
   <div class="footer">
     <h2>KONTAKT</h2>
-    <img class="vector" src="/src/assets/vectorsvg.svg" alt="streg" />
+    <img class="vector" src="/src/billeder/vectorsvg.svg" alt="streg" />
     <div class="footerindhold">
       <div class="facebook">
         <p>
@@ -9,16 +9,16 @@
           og kan findes ved klik på iconet nedenfor.
         </p>
         <a href="https://www.facebook.com/groups/CopenhagenGospelVoices?locale=da_DK">
-          <img class="facebookicon" src="/src/assets/facebook.svg" alt="facebook" />
+          <img class="facebookicon" src="/src/billeder/facebook.svg" alt="facebook" />
         </a>
       </div>
       <div class="kontakt">
         <div class="email">
-          <img src="/src/assets/email.svg" alt="email" />
+          <img src="/src/billeder/email.svg" alt="email" />
           <p>hans@gospelnet.dk</p>
         </div>
         <div class="adresser">
-          <img src="/src/assets/adresse.svg" alt="adresse" />
+          <img src="/src/billeder/adresse.svg" alt="adresse" />
           <a href="https://maps.app.goo.gl/QgQKQGu8chADEJsy7">
             <p>Fredens Kirke</p>
             <p>Ryesgade 68</p>
@@ -37,7 +37,7 @@
 
 <style>
   .footer {
-    background-image: url(/src/assets/footerbaggrund.png);
+    background-image: url(/src/billeder/footerbaggrund.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 150px;
@@ -64,7 +64,7 @@
   }
 
   .facebook {
-    background-image: url('/src/assets/footerboks.png');
+    background-image: url('/src/billeder/footerboks.png');
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 20px;
