--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import MenuScript from './MenuScript.astro';
   <header>
     <div class="logo">
       <a href="/">
-        <img src=" ../src/assets/logogospel.png" alt="Logo" />
+        <img src=" ../src/billeder/logogospel.png" alt="Logo" />
       </a>
     </div>
     <nav>
@@ -44,7 +44,7 @@ import MenuScript from './MenuScript.astro';
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-image: url('../src/assets/headerback.png');
+    background-image: url('../src/billeder/headerback.png');
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     border-bottom: #333333 solid 4px;
   }
