--- a/src/components/Hold.astro
+++ b/src/components/Hold.astro
@@ -5,7 +5,7 @@ const { holdnavn, linje1, linje2, linje3, logo, infohold, holdbillede } = Astro.
 <article>
   <div class="hold">
     <h3>{holdnavn}</h3>
-    <img class="vector" src="/src/assets/vectorsvg.svg" alt="vector" />
+    <img class="vector" src="/src/billeder/vectorsvg.svg" alt="vector" />
     <!-- <div class="holdinfotekst"> -->
     <div class="adressenh">
       <div>
@@ -26,7 +26,7 @@ const { holdnavn, linje1, linje2, linje3, logo, infohold, holdbillede } = Astro.
 
 <style>
   .hold {
-    background-image: url(/src/assets/holdbaggrund.svg);
+    background-image: url(/src/billeder/holdbaggrund.svg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 80%;
