--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,6 +1,6 @@
 ---
-import astroLogo from '../assets/astro.svg';
-import background from '../assets/background.svg';
+import astroLogo from '../billeder/astro.svg';
+import background from '../billeder/background.svg';
 ---
 
 <div id="container">
