--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -27,12 +27,12 @@ import '../styles/fellesskab.css';
       <h1>FÆLLESSKAB</h1>
       <hr />
       <div class="hero">
-        <img src="/src/assets/fellesskabhero.png" alt="heroimg" />
+        <img src="/src/billeder/fellesskabhero.png" alt="heroimg" />
       </div>
       <div class="startfelles">
         <div>
           <h2>HVAD ER GOSPEL?</h2>
-          <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+          <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
           <p class="fellesp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
             aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil,
@@ -50,7 +50,7 @@ import '../styles/fellesskab.css';
         </div>
         <div>
           <h2>HVEM ER MED TIL GOSPEL?</h2>
-          <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+          <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
           <p class="fellesp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
             aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil,
@@ -64,17 +64,17 @@ import '../styles/fellesskab.css';
       </div>
       <div class="billederullen">
         <div class="billederulle">
-          <img src="/src/assets/rulle1.png" alt="rulle1" />
-          <img src="/src/assets/rulle2.png" alt="rulle2" />
-          <img src="/src/assets/rulle3.png" alt="rulle3" />
-          <img src="/src/assets/rulle4.png" alt="rulle4" />
-          <img src="/src/assets/rulle5.png" alt="rulle5" />
-          <img src="/src/assets/rulle6.png" alt="rulle6" />
+          <img src="/src/billeder/rulle1.png" alt="rulle1" />
+          <img src="/src/billeder/rulle2.png" alt="rulle2" />
+          <img src="/src/billeder/rulle3.png" alt="rulle3" />
+          <img src="/src/billeder/rulle4.png" alt="rulle4" />
+          <img src="/src/billeder/rulle5.png" alt="rulle5" />
+          <img src="/src/billeder/rulle6.png" alt="rulle6" />
         </div>
       </div>
       <div class="odas">
         <h2>OVERVEJER DU AT STARTE?</h2>
-        <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+        <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
         <p class="fellesp">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
           aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
@@ -90,7 +90,7 @@ import '../styles/fellesskab.css';
           navn="Johanne Burkhave"
           alder="20 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
-          anbimg="/src/assets/anbefaling1.png"
+          anbimg="/src/billeder/anbefaling1.png"
           udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
           overskrift="Gospel giver overskud til læsningen"
         />
@@ -98,7 +98,7 @@ import '../styles/fellesskab.css';
           navn="Johanne Burkhave"
           alder="20 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
-          anbimg="/src/assets/anbefaling2.png"
+          anbimg="/src/billeder/anbefaling2.png"
           udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
           overskrift="Gospel giver overskud til læsningen"
         />
@@ -106,7 +106,7 @@ import '../styles/fellesskab.css';
           navn="Johanne Burkhave"
           alder="20 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
-          anbimg="/src/assets/anbefaling3.png"
+          anbimg="/src/billeder/anbefaling3.png"
           udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
           overskrift="Gospel giver overskud til læsningen"
         />
@@ -114,13 +114,13 @@ import '../styles/fellesskab.css';
           navn="Johanne Burkhave"
           alder="20 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
-          anbimg="/src/assets/anbefaling4.png"
+          anbimg="/src/billeder/anbefaling4.png"
           udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
           overskrift="Gospel giver overskud til læsningen"
         />
       </div>
       <div class="hero">
-        <img src="/src/assets/slutherofellesskab.png" alt="heroimg" />
+        <img src="/src/billeder/slutherofellesskab.png" alt="heroimg" />
       </div>
       <Footer />
     </main>
