--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,12 +26,12 @@ import '../styles/index.css';
     <main>
       <Header />
       <div class="hero">
-        <img src="/src/assets/heroforside.png" alt="heroimg" />
+        <img src="/src/billeder/heroforside.png" alt="heroimg" />
       </div>
       <h1>GOSPELNET.DK</h1>
       <hr />
       <div class="gospelikbh">
-        <img src="/src/assets/forsidegospel.png" alt="billede1" />
+        <img src="/src/billeder/forsidegospel.png" alt="billede1" />
         <div>
           <h2>GOSPELKOR I KØBENHAVN</h2>
           <p>
@@ -46,7 +46,7 @@ import '../styles/index.css';
         </div>
       </div>
       <div class="hanscjafsnit">
-        <img src="/src/assets/hanscj.png" alt="hanscj" />
+        <img src="/src/billeder/hanscj.png" alt="hanscj" />
         <div>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptatibus
@@ -73,7 +73,7 @@ import '../styles/index.css';
           linje1="Fredens Kirke"
           linje2="Ryesgade 68"
           linje3="2100 Kbh. Ø"
-          logo="/src/assets/thegospelchoirlogo.png"
+          logo="/src/billeder/thegospelchoirlogo.png"
           infohold="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
           holdbillede="/src/assets/gosplechoirimg.png"
         />
@@ -82,7 +82,7 @@ import '../styles/index.css';
           linje1="The Gospel Fellowship"
           linje2="Frederiksberg Allé 9"
           linje3="1621 Kbh. V"
-          logo="/src/assets/copenhagengospelvoices.png"
+          logo="/src/billeder/copenhagengospelvoices.png"
           infohold="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
           holdbillede="/src/assets/copnhagengospelbillede.png"
         />
