--- a/src/pages/kalender.astro
+++ b/src/pages/kalender.astro
@@ -3,6 +3,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Begivenhed from '../components/Begivenhed.astro';
 import '../styles/style.css';
+import '../styles/kalender.css';
 ---
 
 <!doctype html>
@@ -25,11 +26,7 @@ import '../styles/style.css';
       <Header />
       <h1>KALENDER</h1>
       <hr />
-      <div class="kalenderen">
-        <Begivenhed />
-        <Begivenhed />
-        <Begivenhed />
-        <Begivenhed />
+      <div>
         <Begivenhed />
       </div>
 
