--- a/src/pages/tilmeld.astro
+++ b/src/pages/tilmeld.astro
@@ -38,7 +38,7 @@ import '../styles/tilmeld.css';
           <div class="emailboks" contenteditable="true"><p>e-mail</p></div>
           <div class="medlemsskab" contenteditable="true">
             <p>Medlemsskab</p>
-            <img src="/src/assets/dropdown.svg" alt="dropdown" />
+            <img src="/src/billeder/dropdown.svg" alt="dropdown" />
           </div>
           <div class="besked" contenteditable="true"><p>Besked</p></div>
         </div>
@@ -54,7 +54,7 @@ import '../styles/tilmeld.css';
         <p>Tilmeld</p>
       </div>
       <div class="hero">
-        <img src="/src/assets/tilmeldhero.png" alt="heroimg" />
+        <img src="/src/billeder/tilmeldhero.png" alt="heroimg" />
       </div>
       <Footer />
     </main>
