--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -49,7 +49,7 @@ import '../styles/fellesskab.css';
           </p>
         </div>
         <div>
-          <h2>HVEM ER MED TIL GOSPEL?</h2>
+          <h2>HVEM KAN VÆRE MED TIL GOSPEL?</h2>
           <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
           <p class="fellesp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
