--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,12 +35,11 @@ import '../styles/index.css';
         <div>
           <h2>GOSPELKOR I KØBENHAVN</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
+            Kom og syng med - på tirsdag eller på torsdag! Kom og syng med et par gange - helt
+            uforpligtende og gratis - for at se om det er noget for dig. I korene fokuserer vi på
+            energi, glæde, fortolkning og indlevelse. Det frigør en dybtliggende glæde og
+            musikalitet som er helt unik. Du kan - helt gratis og uforpligtende - møde op til åbent
+            hus. Her kan du få en smagsprøve på, hvordan det er at synge gospel hos os!
           </p>
           <a href=""> - Gå til tilmelding</a>
         </div>
@@ -49,16 +48,23 @@ import '../styles/index.css';
         <img src="/src/billeder/hanscj.png" alt="hanscj" />
         <div>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptatibus
-            molestias vel debitis nisi commodi dolores quo tempore laudantium repellat. Expedita
-            quos unde modi aspernatur tempore. Corrupti exercitationem tempora itaque.
+            Hans Christian Jochimsen er Danmarks gospelkoryfæ nummer ét og mestrer især én kunst;
+            han åbner folks hjerter.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus accusantium laudantium
-            quibusdam asperiores, et explicabo architecto id excepturi qui molestias, vero
-            voluptates facere, suscipit unde saepe quas omnis iure tenetur pariatur doloribus
-            deleniti amet eligendi corporis? Ad adipisci hic porro. Quia placeat architecto,
-            consectetur nam iste cumque id iure ratione.
+            Hans musik synges af kor over hele verden, og uge efter uge valfarter op mod tusind vidt
+            forskellige mennesker til hans faste kor og workshops i København for at synge noget så
+            udansk som gospel. Hans Christian siger selv, at han formidler livsglæde. Men den
+            40-årige dirigent og komponist gør mere end det. I hans selskab fornemmer man
+            instinktivt på hans energi og karisma, at det langtfra er et tilfælde, at han har opnået
+            international anerkendelse som både dirigent og komponist.
+          </p>
+          <p>
+            Han betegner selv sin undervisningsstil for mere gruppedynamisk- og psykologisk
+            orienteret end musikalsk orienteret. For eksempel kan han sagtens finde på at kalde
+            tenorgruppen op til sig på scenen til en ”time-out” – en slags peptalk fra ham selv til
+            korets mænd, hvorefter han beder dem om at vende sig om og synge – foran alle de
+            kvinder, der altid er markant i overtal.
           </p>
           <h3>HANS CHRISTIAN JOCHIMSEN</h3>
           <a href="https://www.gospelnet.dk/hans-christian-jochimsen/"
