rigtig tekst indsat

--- a/src/components/Tilmeld.astro
+++ b/src/components/Tilmeld.astro
@@ -12,7 +12,7 @@ const { holdnr, dag, holdnavn, tid } = Astro.props;
       <p>{holdnr}</p>
       <p>{tid}</p>
     </div>
-    <a href="/src/pages/tilmeld.astro">Tilmeld dig her</a>
+    <a href="/tilmeld">Tilmeld dig her</a>
   </div>
 </article>
 
