--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import '../styles/index.css';
             musikalitet som er helt unik. Du kan - helt gratis og uforpligtende - møde op til åbent
             hus. Her kan du få en smagsprøve på, hvordan det er at synge gospel hos os!
           </p>
-          <a href=""> - Gå til tilmelding</a>
+          <a href="#her"> - Gå til tilmelding</a>
         </div>
       </div>
       <div class="hanscjafsnit">
@@ -80,35 +80,25 @@ import '../styles/index.css';
           linje2="Ryesgade 68"
           linje3="2100 Kbh. Ø"
           logo="/src/billeder/thegospelchoirlogo.png"
-          infohold="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
-          holdbillede="/src/assets/gosplechoirimg.png"
+          infohold="The Gospel Choir tilbyder 2 aften hold, og er åbent for alle. Du kan dukke op til hvilket passer dig bedst, der bliver nemlig sunget det samme på begge hold. Der er ingen optagelsesprøve. Du er meget velkommen til at besøge os et par gange, for at se om det er noget for dig. Koret er ledet af Hans Christian Jochimsen."
+          holdbillede="/src/billeder/gosplechoirimg.png"
         />
         <Hold
-          holdnavn="THE GOSPEL FELLOWSHIP"
+          holdnavn="COPENHAGEN GOSPEL VOICES"
           linje1="The Gospel Fellowship"
           linje2="Frederiksberg Allé 9"
           linje3="1621 Kbh. V"
           logo="/src/billeder/copenhagengospelvoices.png"
-          infohold="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
-          holdbillede="/src/assets/copnhagengospelbillede.png"
+          infohold="Copenhagen Gospel Voices tilbyder 2 aften hold, og er åbent for alle. Du kan dukke op til hvilket passer dig bedst, der bliver nemlig sunget det samme på begge hold. Der er ingen optagelsesprøve. Du er meget velkommen til at besøge os et par gange, for at se om det er noget for dig. Koret er ledet af Hans Christian Jochimsen."
+          holdbillede="/src/billeder/copnhagengospelbillede.png"
         />
       </div>
       <h2>TILMELD</h2>
-      <div class="tilmelding">
+      <div class="tilmelding" id="her">
         <Tilmeld holdnr="Hold 1" tid="17:00-19:00" dag="TIRSDAG" holdnavn="(The Gospel Choir)" />
         <Tilmeld holdnr="Hold 2" tid="19:30-21:30" dag="TIRSDAG" holdnavn="(The Gospel Choir)" />
-        <Tilmeld
-          holdnr="Hold 1"
-          tid="17:00-19:00"
-          dag="TORSDAG"
-          holdnavn="(The Gospel Fellowship)"
-        />
-        <Tilmeld
-          holdnr="Hold 1"
-          tid="17:00-19:00"
-          dag="TORSDAG"
-          holdnavn="(The Gospel Fellowship)"
-        />
+        <Tilmeld holdnr="Hold 1" tid="17:00-19:00" dag="TORSDAG" holdnavn="(Cph Gospel Voices)" />
+        <Tilmeld holdnr="Hold 1" tid="17:00-19:00" dag="TORSDAG" holdnavn="(Cph Gospel Voices)" />
       </div>
       <div class="informationer">
         <div>
