--- a/src/pages/tilmeld.astro
+++ b/src/pages/tilmeld.astro
@@ -26,9 +26,10 @@ import '../styles/tilmeld.css';
       <h1>TILMELDING</h1>
       <hr />
       <p class="tilmeldinfo">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nulla vel laborum
-        ad, quam distinctio? Repudiandae voluptatum perferendis quasi porro corrupti quis assumenda
-        nulla placeat rem. Eos perspiciatis nobis asperiores.
+        Det er ikke et krav at tilmelde sig på forhånd. Det er en mulighed her inde på siden at
+        søge, om et specifikt type medlemsskab. Hvis du er studrende el. pensionist er det netop
+        muligt at få rabat, ved blot at skrive en mail til hans@gospelnet.dk, eller ved af
+        formularen nedenfor. Det er også muligt at tilmelde sig ved det kommende gospelmøde.
       </p>
       <div class="gridtilmeld">
         <div>
@@ -44,9 +45,10 @@ import '../styles/tilmeld.css';
         </div>
         <div class="tekstboks">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, cumque. Quisquam
-            voluptatum, asperiores, laboriosam, incidunt quisquam voluptatum asperiores laboriosam
-            incidunt quisquam voluptatum asperiores laboriosam incidunt.
+            Din tilmelding sendes og registreres af Hans Christian Jochimsen, når du trykker
+            tilmeld. Ved næste møde får du tildelt et sanghæfte der er agerer som dit medlemsskab.
+            Du kan bare dukke op så snart det passer dig! Hvis du har nogen spørgsmål, kan du også
+            kontakte ham direkte på e-mail, hans@gospelnet.dk.
           </p>
         </div>
       </div>
