--- a/src/components/Begivenhed.astro
+++ b/src/components/Begivenhed.astro
@@ -33,9 +33,10 @@ if (error) {
     background-image: url(/src/billeder/begivenhedboks.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 675px;
-    width: 100%;
-    margin: 25px;
+    height: auto;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
     padding: 20px;
   }
 
@@ -55,8 +56,9 @@ if (error) {
 
   .begivenhed p {
     width: 350px;
-    margin-left: 35px;
-    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
     font-family: 'Fira Sans', sans-serif;
   }
   .adresse h4 {
