--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -27,12 +27,12 @@ import '../styles/fellesskab.css';
       <h1>FÆLLESSKAB</h1>
       <hr />
       <div class="hero">
-        <img src="/src/billeder/fellesskabhero.png" alt="heroimg" />
+        <img src="/public/billeder/fellesskabhero.png" alt="heroimg" />
       </div>
       <div class="startfelles">
         <div>
           <h2>HVAD ER GOSPEL?</h2>
-          <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
+          <img class="vector" src="/public/billeder/vectorsort.svg" alt="vector" />
           <p class="fellesp">
             Du er kommet til det helt rigtige sted, hvis du har lyst til at synge gospel. I korene
             fokuserer vi på energi, glæde, fortolkning og indlevelse. Det frigør en dybtliggende
@@ -45,7 +45,7 @@ import '../styles/fellesskab.css';
         </div>
         <div>
           <h2>HVEM KAN VÆRE MED TIL GOSPEL?</h2>
-          <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
+          <img class="vector" src="/public/billeder/vectorsort.svg" alt="vector" />
           <p class="fellesp">
             ALLE kan være med! Gospel er en inkluderende musikgenre! Gospel har ikke noget at gøre
             med hvem der synger bedst... Gospel handler om udtryk, indlevelse, energi, glæde, smerte
@@ -60,17 +60,17 @@ import '../styles/fellesskab.css';
       </div>
       <div class="billederullen">
         <div class="billederulle">
-          <img src="/src/billeder/rulle1.png" alt="rulle1" />
-          <img src="/src/billeder/rulle2.png" alt="rulle2" />
-          <img src="/src/billeder/rulle3.png" alt="rulle3" />
-          <img src="/src/billeder/rulle4.png" alt="rulle4" />
-          <img src="/src/billeder/rulle5.png" alt="rulle5" />
-          <img src="/src/billeder/rulle6.png" alt="rulle6" />
+          <img src="/public/billeder/rulle1.png" alt="rulle1" />
+          <img src="/public/billeder/rulle2.png" alt="rulle2" />
+          <img src="/public/billeder/rulle3.png" alt="rulle3" />
+          <img src="/public/billeder/rulle4.png" alt="rulle4" />
+          <img src="/public/billeder/rulle5.png" alt="rulle5" />
+          <img src="/public/billeder/rulle6.png" alt="rulle6" />
         </div>
       </div>
       <div class="odas">
         <h2>OVERVEJER DU AT STARTE?</h2>
-        <img class="vector" src="/src/billeder/vectorsort.svg" alt="vector" />
+        <img class="vector" src="/public/billeder/vectorsort.svg" alt="vector" />
         <p class="fellesp">
           Hvis du har lyst til at synge med et par gange før du tilmelder dig er du MEGET velkommen
           til det! Det er helt fair lige at se koret an før du beslutter dig.  Herunder kan du se
@@ -83,7 +83,7 @@ import '../styles/fellesskab.css';
           navn="Agnete Emborg"
           alder="25 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
-          anbimg="/src/billeder/anbefaling1.png"
+          anbimg="/public/billeder/anbefaling1.png"
           udtalelse="Jeg kom her sidste sæson uden at kende nogen overhovedet. Men lige så snart jeg kom ind, skulle man hilse på andre, og fortælle sit navn – dét synes jeg var fint"
           overskrift="Gospel giver fællesskabsfølelse"
         />
@@ -91,7 +91,7 @@ import '../styles/fellesskab.css';
           navn="Johanne Burkhave"
           alder="20 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-overskud/"
-          anbimg="/src/billeder/anbefaling2.png"
+          anbimg="/public/billeder/anbefaling2.png"
           udtalelse="Gospel giver energi, overskud og glæde. Jeg læser bedst om tirsdagen, når jeg kommer hjem fra gospel."
           overskrift="Gospel giver overskud til læsningen"
         />
@@ -99,7 +99,7 @@ import '../styles/fellesskab.css';
           navn="Martin Køhler "
           alder="36 år"
           link="https://www.gospelnet.dk/artikler/kraft-og-styrke-i-at-synge/"
-          anbimg="/src/billeder/anbefaling3.png"
+          anbimg="/public/billeder/anbefaling3.png"
           udtalelse="Det gør noget helt særligt at synge gospel - og dét at synge i det hele taget.  Det er en måde at udtrykke sig på. Jeg får fat i nogle følelser, som jeg ikke ellers udtrykker."
           overskrift="Der er kraft og styrke i at synge"
         />
@@ -107,13 +107,13 @@ import '../styles/fellesskab.css';
           navn="Lotte Nielsen"
           alder="49 år"
           link="https://www.gospelnet.dk/artikler/gospel-samler/"
-          anbimg="/src/billeder/anbefaling4.png"
+          anbimg="/public/billeder/anbefaling4.png"
           udtalelse="Det er helt vidunderligt. Jeg bliver fuldstændig fyldt op af at synge Gospel."
           overskrift="Gospel samler folk på tværs af skel"
         />
       </div>
       <div class="hero">
-        <img src="/src/billeder/slutherofellesskab.png" alt="heroimg" />
+        <img src="/public/billeder/slutherofellesskab.png" alt="heroimg" />
       </div>
       <Footer />
     </main>
