--- a/src/components/MenuScript.astro
+++ b/src/components/MenuScript.astro
@@ -1,5 +1,1 @@
-<!-- ---
-
----
-
-<script type="module" src="./scripts/menu.js"></script> -->
+<script type="module" src="/scripts/menu.js"></script>
