--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import MenuScript from './MenuScript.astro';
+// import MenuScript from './MenuScript.astro';
 ---
 
 <article>
@@ -28,7 +28,7 @@ import MenuScript from './MenuScript.astro';
   </header>
 </article>
 
-<MenuScript client:load />
+<!-- <MenuScript client:load /> -->
 
 <style>
   * {
@@ -44,7 +44,7 @@ import MenuScript from './MenuScript.astro';
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-image: url('../public/billeder/headerback.png');
+    background-image: url('../billeder/headerback.png');
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     border-bottom: #333333 solid 4px;
   }
