--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-// import MenuScript from './MenuScript.astro';
+import MenuScript from './MenuScript.astro';
 ---
 
 <article>
@@ -28,7 +28,7 @@
   </header>
 </article>
 
-<!-- <MenuScript client:load /> -->
+<MenuScript client:load />
 
 <style>
   * {
