--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ import MenuScript from './MenuScript.astro';
   </header>
 </article>
 
-<MenuScript client:load />
+<MenuScript />
 
 <style>
   * {
