--- a/src/components/Hold.astro
+++ b/src/components/Hold.astro
@@ -26,7 +26,7 @@ const { holdnavn, linje1, linje2, linje3, logo, infohold, holdbillede } = Astro.
 
 <style>
   .hold {
-    background-image: url(/public/billeder/holdbaggrund.svg);
+    background-image: url(/billeder/holdbaggrund.svg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 80%;
