--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,12 +26,12 @@ import '../styles/index.css';
     <main>
       <Header />
       <div class="hero">
-        <img src="/public/billeder/heroforside.png" alt="heroimg" />
+        <img src="/billeder/heroforside.png" alt="heroimg" />
       </div>
       <h1>GOSPELNET.DK</h1>
       <hr />
       <div class="gospelikbh">
-        <img src="/public/billeder/forsidegospel.png" alt="billede1" />
+        <img src="/billeder/forsidegospel.png" alt="billede1" />
         <div>
           <h2>GOSPELKOR I KØBENHAVN</h2>
           <p>
@@ -45,7 +45,7 @@ import '../styles/index.css';
         </div>
       </div>
       <div class="hanscjafsnit">
-        <img src="/public/billeder/hanscj.png" alt="hanscj" />
+        <img src="/billeder/hanscj.png" alt="hanscj" />
         <div>
           <p>
             Hans Christian Jochimsen er Danmarks gospelkoryfæ nummer ét og mestrer især én kunst;
@@ -79,18 +79,18 @@ import '../styles/index.css';
           linje1="Fredens Kirke"
           linje2="Ryesgade 68"
           linje3="2100 Kbh. Ø"
-          logo="/public/billeder/thegospelchoirlogo.png"
+          logo="/billeder/thegospelchoirlogo.png"
           infohold="The Gospel Choir tilbyder 2 aften hold, og er åbent for alle. Du kan dukke op til hvilket passer dig bedst, der bliver nemlig sunget det samme på begge hold. Der er ingen optagelsesprøve. Du er meget velkommen til at besøge os et par gange, for at se om det er noget for dig. Koret er ledet af Hans Christian Jochimsen."
-          holdbillede="/public/billeder/gosplechoirimg.png"
+          holdbillede="/billeder/gosplechoirimg.png"
         />
         <Hold
           holdnavn="COPENHAGEN GOSPEL VOICES"
           linje1="The Gospel Fellowship"
           linje2="Frederiksberg Allé 9"
           linje3="1621 Kbh. V"
-          logo="/public/billeder/copenhagengospelvoices.png"
+          logo="/billeder/copenhagengospelvoices.png"
           infohold="Copenhagen Gospel Voices tilbyder 2 aften hold, og er åbent for alle. Du kan dukke op til hvilket passer dig bedst, der bliver nemlig sunget det samme på begge hold. Der er ingen optagelsesprøve. Du er meget velkommen til at besøge os et par gange, for at se om det er noget for dig. Koret er ledet af Hans Christian Jochimsen."
-          holdbillede="/public/billeder/copnhagengospelbillede.png"
+          holdbillede="/billeder/copnhagengospelbillede.png"
         />
       </div>
       <h2>TILMELD</h2>
