--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,11 +14,11 @@
       </div>
       <div class="kontakt">
         <div class="email">
-          <img src="/public/billeder/email.svg" alt="email" />
+          <img src="/billeder/email.svg" alt="email" />
           <p>hans@gospelnet.dk</p>
         </div>
         <div class="adresser">
-          <img src="/public/billeder/adresse.svg" alt="adresse" />
+          <img src="/billeder/adresse.svg" alt="adresse" />
           <a href="https://maps.app.goo.gl/QgQKQGu8chADEJsy7">
             <p>Fredens Kirke</p>
             <p>Ryesgade 68</p>
@@ -37,7 +37,7 @@
 
 <style>
   .footer {
-    background-image: url(/public/billeder/footerbaggrund.png);
+    background-image: url(/billeder/footerbaggrund.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 150px;
@@ -64,7 +64,7 @@
   }
 
   .facebook {
-    background-image: url('/public/billeder/footerboks.png');
+    background-image: url('/billeder/footerboks.png');
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 20px;
