--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import MenuScript from './MenuScript.astro';
   <header>
     <div class="logo">
       <a href="/">
-        <img src=" ../public/billeder/logogospel.png" alt="Logo" />
+        <img src=" ../billeder/logogospel.png" alt="Logo" />
       </a>
     </div>
     <nav>
