--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <article>
   <div class="footer">
     <h2>KONTAKT</h2>
-    <img class="vector" src="/public/billeder/vectorsvg.svg" alt="streg" />
+    <img class="vector" src="/billeder/vectorsvg.svg" alt="streg" />
     <div class="footerindhold">
       <div class="facebook">
         <p>
@@ -9,7 +9,7 @@
           og kan findes ved klik på iconet nedenfor.
         </p>
         <a href="https://www.facebook.com/groups/CopenhagenGospelVoices?locale=da_DK">
-          <img class="facebookicon" src="/public/billeder/facebook.svg" alt="facebook" />
+          <img class="facebookicon" src="/billeder/facebook.svg" alt="facebook" />
         </a>
       </div>
       <div class="kontakt">
